use question instead of comment it is read as Ask Clover for auto values
Signed-off-by: SergeySlice <sergey.slice@gmail.com>

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -97,7 +97,7 @@
 					<key>Comment</key>
 					<string>Rename GFX0 to IGPU</string>
 					<key>Disabled</key>
-					<false/>
+					<true/>
 					<key>Find</key>
 					<data>
 					R0ZYMA==
@@ -156,7 +156,7 @@
 			<false/>
 			<key>Rtc8Allowed</key>
 			<true/>
-			<key>#SuspendOverride</key>
+			<key>SuspendOverride?</key>
 			<false/>
 		</dict>
 		<key>DisableASPM</key>
@@ -180,7 +180,7 @@
 				<string>CpuPm</string>
 			</dict>
 			<dict>
-				<key>#Length</key>
+				<key>Length?</key>
 				<integer>720</integer>
 				<key>Signature</key>
 				<string>SSDT</string>
@@ -202,7 +202,7 @@
 		<true/>
 		<key>PatchAPIC</key>
 		<false/>
-		<key>#RenameDevices</key>
+		<key>RenameDevices?</key>
 		<array>
 			<dict>
 				<key>_SB.PCI0.RP05.PXSX</key>
@@ -217,47 +217,47 @@
 				<string>BRG3</string>
 			</dict>
 		</array>
-		<key>#ResetAddress</key>
+		<key>ResetAddress?</key>
 		<string>0x64</string>
-		<key>#ResetValue</key>
+		<key>ResetValue?</key>
 		<string>0xFE</string>
 		<key>SSDT</key>
 		<dict>
-			<key>#C3Latency</key>
+			<key>C3Latency?</key>
 			<string>0x03E7</string>
-			<key>#DoubleFirstState</key>
+			<key>DoubleFirstState?</key>
 			<true/>
-			<key>#DropOem</key>
+			<key>DropOem?</key>
 			<true/>
-			<key>#EnableC2</key>
+			<key>EnableC2?</key>
 			<false/>
-			<key>#EnableC4</key>
+			<key>EnableC4?</key>
 			<false/>
-			<key>#EnableC6</key>
+			<key>EnableC6?</key>
 			<true/>
-			<key>#EnableC7</key>
+			<key>EnableC7?</key>
 			<false/>
-			<key>#MaxMultiplier</key>
+			<key>MaxMultiplier?</key>
 			<integer>12</integer>
-			<key>#MinMultiplier</key>
+			<key>MinMultiplier?</key>
 			<integer>8</integer>
-			<key>#NoDynamicExtract</key>
+			<key>NoDynamicExtract?</key>
 			<false/>
-			<key>#NoOemTableId</key>
+			<key>NoOemTableId?</key>
 			<false/>
-			<key>#PLimitDict</key>
+			<key>PLimitDict?</key>
 			<integer>1</integer>
-			<key>#UnderVoltStep</key>
+			<key>UnderVoltStep?</key>
 			<integer>1</integer>
-			<key>#UseSystemIO</key>
+			<key>UseSystemIO?</key>
 			<false/>
 			<key>Generate</key>
 			<dict>
-				<key>#APLF</key>
+				<key>APLF?</key>
 				<false/>
-				<key>#APSN</key>
+				<key>APSN<?/key>
 				<false/>
-				<key>#PluginType</key>
+				<key>PluginType?</key>
 				<false/>
 				<key>CStates</key>
 				<true/>
@@ -265,7 +265,7 @@
 				<true/>
 			</dict>
 		</dict>
-		<key>#SortedOrder</key>
+		<key>SortedOrder?</key>
 		<array>
 			<string>SSDT-3.aml</string>
 			<string>SSDT-1.aml</string>
@@ -276,13 +276,13 @@
 	</dict>
 	<key>Boot</key>
 	<dict>
-		<key>#Arguments</key>
+		<key>Arguments?</key>
 		<string>slide=0 darkwake=0</string>
 		<key>CustomLogo</key>
 		<false/>
 		<key>Debug</key>
 		<false/>
-		<key>#DefaultLoader</key>
+		<key>DefaultLoader?</key>
 		<string>boot.efi</string>
 		<key>DefaultVolume</key>
 		<string>LastBootedVolume</string>
@@ -310,7 +310,7 @@
 		<false/>
 		<key>Timeout</key>
 		<integer>5</integer>
-		<key>#XMPDetection</key>
+		<key>XMPDetection?</key>
 		<string>-1</string>
 	</dict>
 	<key>BootGraphics</key>
@@ -324,75 +324,73 @@
 	</dict>
 	<key>CPU</key>
 	<dict>
-		<key>#BusSpeedkHz</key>
+		<key>BusSpeedkHz?</key>
 		<integer>133330</integer>
-		<key>#FrequencyMHz</key>
+		<key>FrequencyMHz?</key>
 		<integer>3140</integer>
-		<key>#HWPEnable</key>
+		<key>HWPEnable?</key>
 		<true/>
-		<key>#HWPValue</key>
+		<key>HWPValue?</key>
 		<string>0x30002a01</string>
-		<key>#QPI</key>
+		<key>QPI?</key>
 		<integer>4800</integer>
-		<key>#SavingMode</key>
+		<key>SavingMode?</key>
 		<integer>7</integer>
-		<key>#TDP</key>
+		<key>TDP?</key>
 		<integer>95</integer>
-		<key>#TurboDisable</key>
-		<true/>
-		<key>#Type</key>
+		<key>TurboDisable?</key>
+		<false/>
+		<key>Type?</key>
 		<string>0x0201</string>
 		<key>UseARTFrequency</key>
 		<true/>
 	</dict>
 	<key>Devices</key>
 	<dict>
-		<key>#Audio</key>
+		<key>Audio?</key>
 		<dict>
 			<key>AFGLowPowerState</key>
 			<true/>
-			<key>#Inject</key>
+			<key>Inject?</key>
 			<string>12</string>
 			<key>ResetHDA</key>
 			<true/>
 		</dict>
-		<key>#DisableFunctions</key>
+		<key>DisableFunctions?</key>
 		<string>0x18F6</string>
 		<key>FakeID</key>
 		<dict>
-			<key>#ATI</key>
+			<key>ATI?</key>
 			<string>0x67501002</string>
-			<key>#IMEI</key>
+			<key>IMEI?</key>
 			<string>0x1e208086</string>
-			<key>#IntelGFX</key>
-			<string>0x01668086</string>
-			<key>#LAN</key>
+			<key>IntelGFX?</key>
+			<string>0x59168086</string>
+			<key>LAN?</key>
 			<string>0x100E8086</string>
-			<key>#NVidia</key>
+			<key>NVidia?</key>
 			<string>0x11de10de</string>
-			<key>#SATA</key>
+			<key>SATA?</key>
 			<string>0x26818086</string>
-			<key>#WIFI</key>
+			<key>WIFI?</key>
 			<string>0x0030168C</string>
-			<key>#XHCI</key>
-			<string>0x0</string>
+			<key>XHCI?</key>
+			<string>0xA12F8086</string>
 		</dict>
-		<key>#ForceHPET</key>
+		<key>ForceHPET?</key>
 		<false/>
-		<key>#HDMIInjection</key>
+		<key>HDMIInjection?</key>
 		<false/>
-		<key>#IntelMaxValue</key>
+		<key>IntelMaxValue?</key>
 		<string>0x710</string>
-		<key>#LANInjection</key>
+		<key>LANInjection?</key>
 		<false/>
-		<key>#NoDefaultProperties</key>
+		<key>NoDefaultProperties?</key>
 		<false/>
-		<key>#Properties</key>
+		<key>Properties?</key>
 		<dict>
 			<key>PciRoot(0x0)/Pci(0x14,0x0)</key>
 			<dict>
-				<key>Comment</key>
-				<string>This is USB3.0</string>
 				<key>AAPL,clock-id</key>
 				<data>
 				AA==
@@ -409,6 +407,8 @@
 				<data>
 				6AM=
 				</data>
+				<key>Comment</key>
+				<string>This is USB3.0</string>
 				<key>built-in</key>
 				<data>
 				AA==
@@ -566,17 +566,17 @@
 				</data>
 			</dict>
 		</dict>
-		<key>#SetIntelBacklight</key>
+		<key>SetIntelBacklight?</key>
 		<false/>
-		<key>#SetIntelMaxBacklight</key>
+		<key>SetIntelMaxBacklight?</key>
 		<true/>
 		<key>USB</key>
 		<dict>
-			<key>AddClockID</key>
+			<key>AddClockID?</key>
 			<true/>
 			<key>FixOwnership</key>
 			<true/>
-			<key>HighCurrent</key>
+			<key>HighCurrent?</key>
 			<false/>
 			<key>Inject</key>
 			<false/>
@@ -584,7 +584,7 @@
 		<key>UseIntelHDMI</key>
 		<false/>
 	</dict>
-	<key>#DisableDrivers</key>
+	<key>DisableDrivers?</key>
 	<array>
 		<string>CsmVideoDxe</string>
 		<string>VBoxExt4</string>
@@ -593,7 +593,7 @@
 	<dict>
 		<key>ConsoleMode</key>
 		<string>0</string>
-		<key>#Custom</key>
+		<key>Custom?</key>
 		<dict>
 			<key>Entries</key>
 			<array>
@@ -696,26 +696,26 @@
 				</dict>
 			</array>
 		</dict>
-		<key>#CustomIcons</key>
+		<key>CustomIcons?</key>
 		<false/>
 		<key>EmbeddedThemeType</key>
 		<string>Daytime</string>
-		<key>#Hide</key>
+		<key>Hide?</key>
 		<array>
 			<string>Windows</string>
 			<string>BOOTX64.EFI</string>
 		</array>
-		<key>#KbdPrevLang</key>
+		<key>KbdPrevLang?</key>
 		<false/>
-		<key>#Language</key>
+		<key>Language?</key>
 		<string>en:0</string>
-		<key>#Mouse</key>
+		<key>Mouse?</key>
 		<dict>
-			<key>DoubleClickTime</key>
+			<key>DoubleClickTime?</key>
 			<integer>500</integer>
 			<key>Enabled</key>
 			<true/>
-			<key>Mirror</key>
+			<key>Mirror?</key>
 			<false/>
 			<key>Speed</key>
 			<integer>2</integer>
@@ -724,7 +724,7 @@
 		<false/>
 		<key>ProvideConsoleGop</key>
 		<true/>
-		<key>#Scan</key>
+		<key>Scan?</key>
 		<dict>
 			<key>Entries</key>
 			<true/>
@@ -733,9 +733,9 @@
 			<key>Tool</key>
 			<true/>
 		</dict>
-		<key>ScreenResolution</key>
+		<key>ScreenResolution?</key>
 		<string>1280x1024</string>
-		<key>#ShowOptimus</key>
+		<key>ShowOptimus?</key>
 		<false/>
 		<key>TextOnly</key>
 		<false/>
@@ -746,32 +746,52 @@
 	</dict>
 	<key>Graphics</key>
 	<dict>
-		<key>#DualLink</key>
+		<key>DualLink?</key>
 		<integer>0</integer>
-		<key>#FBName</key>
+		<key>EDID</key>
+		<dict>
+			<key>Custom?</key>
+			<data>
+			AP///////wAGECGSAAAAAAASAQOAIRV4CunVmVlTjigmUFQAAAAB
+			AQEBAQEBAQEBAQEBAQEB3iGgcFCEHzAgIFYAS88QAAAY3iGgcFCE
+			HzAgIFYAS88QAAAAAAAA/gBXNjU3RwAxNTRXUDEKAAAA/gAjMz1I
+			ZYSq/wIBCiAgAJo=
+			</data>
+			<key>HorizontalSyncPulseWidth?</key>
+			<string>0x11</string>
+			<key>Inject?</key>
+			<true/>
+			<key>ProductID?</key>
+			<string>0x9221</string>
+			<key>VendorID?</key>
+			<string>0x1006</string>
+			<key>VideoInputSignal?</key>
+			<string>0xA1</string>
+		</dict>
+		<key>FBName?</key>
 		<string>Makakakakala</string>
-		<key>#Inject</key>
+		<key>Inject?</key>
 		<dict>
 			<key>ATI</key>
 			<true/>
 			<key>Intel</key>
-			<false/>
+			<true/>
 			<key>NVidia</key>
-			<false/>
+			<true/>
 		</dict>
-		<key>#LoadVBios</key>
-		<false/>
-		<key>#NVCAP</key>
-		<string>04000000000003000C0000000000000A00000000</string>
-		<key>#NvidiaGeneric</key>
+		<key>LoadVBios?</key>
 		<true/>
-		<key>#NvidiaNoEFI</key>
+		<key>NVCAP?</key>
+		<string>04000000000003000C0000000000000A00000000</string>
+		<key>NvidiaGeneric?</key>
+		<true/>
+		<key>NvidiaNoEFI?</key>
 		<false/>
-		<key>#NvidiaSingle</key>
+		<key>NvidiaSingle?</key>
 		<false/>
-		<key>#PatchVBios</key>
+		<key>PatchVBios?</key>
 		<false/>
-		<key>#PatchVBiosBytes</key>
+		<key>PatchVBiosBytes?</key>
 		<array>
 			<dict>
 				<key>Find</key>
@@ -784,36 +804,16 @@
 				</data>
 			</dict>
 		</array>
-		<key>#RadeonDeInit</key>
+		<key>RadeonDeInit?</key>
 		<true/>
-		<key>#VRAM</key>
+		<key>VRAM?</key>
 		<integer>1024</integer>
-		<key>#VideoPorts</key>
+		<key>VideoPorts?</key>
 		<integer>2</integer>
-		<key>#display-cfg</key>
+		<key>display-cfg?</key>
 		<string>03010300FFFF0001</string>
-		<key>#ig-platform-id</key>
+		<key>ig-platform-id?</key>
 		<string>0x01620005</string>
-		<key>EDID</key>
-		<dict>
-			<key>#Custom</key>
-			<data>
-			AP///////wAGECGSAAAAAAASAQOAIRV4CunVmVlTjigmUFQAAAAB
-			AQEBAQEBAQEBAQEBAQEB3iGgcFCEHzAgIFYAS88QAAAY3iGgcFCE
-			HzAgIFYAS88QAAAAAAAA/gBXNjU3RwAxNTRXUDEKAAAA/gAjMz1I
-			ZYSq/wIBCiAgAJo=
-			</data>
-			<key>#HorizontalSyncPulseWidth</key>
-			<string>0x11</string>
-			<key>#Inject</key>
-			<true/>
-			<key>#ProductID</key>
-			<string>0x9221</string>
-			<key>#VendorID</key>
-			<string>0x1006</string>
-			<key>#VideoInputSignal</key>
-			<string>0xA1</string>
-		</dict>
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
@@ -823,7 +823,7 @@
 		<string>000400000403000000010000210302040400000014020000000100000000040310000000100000000001000000000001</string>
 		<key>#ATIConnectorsPatch</key>
 		<string>040000001402000000010000000004040004000004030000000100001102010500000000000000000000000000000000</string>
-		<key>#AppleIntelCPUPM</key>
+		<key>AppleIntelCPUPM?</key>
 		<true/>
 		<key>AppleRTC</key>
 		<false/>
@@ -852,9 +852,9 @@
 		<false/>
 		<key>EightApple</key>
 		<false/>
-		<key>#FakeCPUID</key>
+		<key>FakeCPUID</key>
 		<string>0x010676</string>
-		<key>#ForceKextsToLoad</key>
+		<key>ForceKextsToLoad?</key>
 		<array>
 			<string>\System\Library\Extensions\AMD6000Controller.kext</string>
 			<string>\System\Library\Extensions\AMDFramebuffer.kext</string>
@@ -1230,7 +1230,7 @@
 				<key>Comment</key>
 				<string>Dell variables</string>
 				<key>Disabled</key>
-				<false/>
+				<true/>
 				<key>Guid</key>
 				<string>FF2E9FC7-D16F-434A-A24E-C99519B7EB93</string>
 				<key>Name</key>
@@ -1238,10 +1238,10 @@
 			</dict>
 		</array>
 		<key>BooterConfig</key>
-		<string>0x28</string>
+		<string>0x68</string>
 		<key>CsrActiveConfig</key>
-		<string>0xA87</string>
-		<key>#HWTarget</key>
+		<string>0x0A87</string>
+		<key>HWTarget?</key>
 		<string>J160AP</string>
 		<key>MLB</key>
 		<string>C02032109R6DC771H</string>
@@ -1250,45 +1250,45 @@
 	</dict>
 	<key>SMBIOS</key>
 	<dict>
-		<key>#BiosReleaseDate</key>
+		<key>BiosReleaseDate?</key>
 		<string>05/03/10</string>
-		<key>#BiosVendor</key>
+		<key>BiosVendor?</key>
 		<string>Apple Inc.</string>
-		<key>#BiosVersion</key>
+		<key>BiosVersion?</key>
 		<string>IM131.88Z.F000.B00.1907241303</string>
-		<key>#Board-ID</key>
+		<key>Board-ID?</key>
 		<string>Mac-FC02E91DDD3FA6A4</string>
-		<key>#BoardManufacturer</key>
+		<key>BoardManufacturer?</key>
 		<string>Apple Inc.</string>
-		<key>#BoardSerialNumber</key>
+		<key>BoardSerialNumber?</key>
 		<string>C0225060SAMF651AX</string>
-		<key>#BoardType</key>
+		<key>BoardType?</key>
 		<integer>10</integer>
-		<key>#BoardVersion</key>
+		<key>BoardVersion?</key>
 		<string>Proto1</string>
-		<key>#ChassisAssetTag</key>
+		<key>ChassisAssetTag?</key>
 		<string>Desktop</string>
-		<key>#ChassisManufacturer</key>
+		<key>ChassisManufacturer?</key>
 		<string>Apple Inc.</string>
-		<key>#ChassisType</key>
+		<key>ChassisType?</key>
 		<integer>16</integer>
-		<key>#EfiVersion</key>
+		<key>EfiVersion?</key>
 		<string>288.0.0.0.0</string>
-		<key>#ExtendedFirmwareFeatures</key>
+		<key>ExtendedFirmwareFeatures?</key>
 		<string>0x8FE001403</string>
-		<key>#ExtendedFirmwareFeaturesMask</key>
+		<key>ExtendedFirmwareFeaturesMask?</key>
 		<string>0xFFFFFFFFFF</string>
-		<key>#Family</key>
+		<key>Family?</key>
 		<string>iMac</string>
-		<key>#FirmwareFeatures</key>
+		<key>FirmwareFeatures?</key>
 		<string>0xC0001403</string>
-		<key>#FirmwareFeaturesMask</key>
+		<key>FirmwareFeaturesMask?</key>
 		<string>0xFFFFFFFF</string>
-		<key>#LocationInChassis</key>
+		<key>LocationInChassis?</key>
 		<string>Part Component</string>
-		<key>#Manufacturer</key>
+		<key>Manufacturer?</key>
 		<string>Apple Inc.</string>
-		<key>#Memory</key>
+		<key>Memory?</key>
 		<dict>
 			<key>Channels</key>
 			<integer>2</integer>
@@ -1330,19 +1330,19 @@
 			<key>SlotCount</key>
 			<integer>4</integer>
 		</dict>
-		<key>#MemoryRank</key>
+		<key>MemoryRank?</key>
 		<integer>2</integer>
-		<key>#Mobile</key>
+		<key>Mobile?</key>
 		<true/>
-		<key>#NoRomInfo</key>
-		<true/>
-		<key>#PlatformFeature</key>
+		<key>NoRomInfo</key>
+		<false/>
+		<key>PlatformFeature?</key>
 		<string>0x00</string>
-		<key>#ProductName</key>
+		<key>ProductName?</key>
 		<string>iMac13,2</string>
-		<key>#SerialNumber</key>
+		<key>SerialNumber?</key>
 		<string>C02JBSAMDNCW</string>
-		<key>#Slots</key>
+		<key>Slots?</key>
 		<array>
 			<dict>
 				<key>Device</key>
@@ -1365,20 +1365,20 @@
 				<integer>1</integer>
 			</dict>
 		</array>
-		<key>#SmUUID</key>
+		<key>SmUUID?</key>
 		<string>00000000-0000-1000-8000-010203040506</string>
-		<key>#SmbiosVersion</key>
+		<key>SmbiosVersion?</key>
 		<string>0x0300</string>
-		<key>#Trust</key>
+		<key>Trust?</key>
 		<true/>
-		<key>#Version</key>
+		<key>Version?</key>
 		<string>1.0</string>
 	</dict>
 	<key>SystemParameters</key>
 	<dict>
-		<key>#BacklightLevel</key>
+		<key>BacklightLevel?</key>
 		<string>0x0501</string>
-		<key>#CustomUUID</key>
+		<key>CustomUUID?</key>
 		<string>511CE201-1000-4000-9999-010203040506</string>
 		<key>InjectKexts</key>
 		<true/>
@@ -1386,7 +1386,7 @@
 		<true/>
 		<key>NoCaches</key>
 		<false/>
-		<key>NvidiaWeb</key>
+		<key>NvidiaWeb?</key>
 		<false/>
 	</dict>
 </dict>
