make build system more successful
Signed-off-by: Slice <sergey.slice@gmail.com>

--- a/CloverPackage/utils/Makefile
+++ b/CloverPackage/utils/Makefile
@@ -2,6 +2,7 @@
 include $(CURDIR)/Make.rules
 #fdisk440 out
 #clover-genconfig temporary out
-SUBDIRS = boot1-install partutil bdmesg espfinder
+#espfinder out
+SUBDIRS = boot1-install partutil bdmesg
 
 all: all-recursive
