--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -1104,6 +1104,8 @@
             <string>0x8FE001403</string>
             <key>ExtendedFirmwareFeaturesMask?</key>
             <string>0xFFFFFFFFFF</string>
+            <key>FakeCPUID</key>
+            <string>0x0406E1</string>
             <key>Family?</key>
             <string>iMac</string>
             <key>FirmwareFeatures?</key>
@@ -1285,6 +1287,8 @@
             <string>0xE00DE137</string>
             <key>FirmwareFeaturesMask</key>
             <string>0xFF1FFF3F</string>
+            <key>FakeCPUID</key>
+            <string>0x0406E1</string>
             <key>LocationInChassis</key>
             <string>Part Component</string>
             <key>Manufacturer</key>
