--- a/CloverPackage/utils/Makefile
+++ b/CloverPackage/utils/Makefile
@@ -3,6 +3,6 @@ include $(CURDIR)/Make.rules
 #fdisk440 out
 #clover-genconfig temporary out
 #espfinder out
-SUBDIRS = boot1-install partutil bdmesg
+SUBDIRS = boot1-install partutil bdmesg nvram
 
 all: all-recursive
