create new toolset XCODE15 for Sonoma'
Signed-off-by: Slice <sergey.slice@gmail.com>

--- a/CloverPackage/utils/nvram/Makefile
+++ b/CloverPackage/utils/nvram/Makefile
@@ -15,7 +15,7 @@ all: $(PROG)
 
 $(PROG): $(SRC)
 	@echo "\t[CXX] $(PROGRAM)"
-	@cc -o $(PROGRAM) $(PROGRAM).c -framework CoreFoundation -framework IOKit -Wall >/dev/null
+	#@cc -o $(PROGRAM) $(PROGRAM).c -framework CoreFoundation -framework IOKit -Wall >/dev/null
 	@mv $(PROGRAM) $(UTILSDIR)
 
 install-local: $(PROG)
