make the utility to be universal from 10.13 upto now
Signed-off-by: Slice <sergey.slice@gmail.com>

--- a/CloverPackage/utils/nvram/Makefile
+++ b/CloverPackage/utils/nvram/Makefile
@@ -14,8 +14,8 @@ PROG := $(addprefix $(UTILSDIR)/, $(PROGRAM))
 all: $(PROG)
 
 $(PROG): $(SRC)
-	@echo "\t[CXX] $(PROGRAM)"
-	@cc -o $(PROGRAM) $(PROGRAM).c -framework CoreFoundation -framework IOKit -Wall >/dev/null
+	@echo "\t[CLANG] $(PROGRAM)"
+	@clang -o $(PROGRAM) $(PROGRAM).c -framework CoreFoundation -framework IOKit -mmacosx-version-min=10.13 >/dev/null
 	@mv $(PROGRAM) $(UTILSDIR)
 
 install-local: $(PROG)
